--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -26,7 +26,7 @@ jobs:
           git config --global user.email murillo.bianconi@gmail.com
           git config --global user.name Murillo Bianconi
           git status
-          git remote add origin https://${{secrets.commit_secret}}@github.com:mcbianconi/hackathon-ccr-frontend.git
+          git remote add origin https://${{secrets.commit_secret}}@github.com/mcbianconi/hackathon-ccr-frontend.git
           git checkout -b gh-pages
           git add --all
           git commit -m "update"
