--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,7 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   http: ^0.12.1
-  flexible_polyline: ^1.0.0-alpha           
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -24,6 +23,8 @@ flutter:
   uses-material-design: true
   assets:
     - images/logo.png
+    - images/avatar.png
+    - images/posto.jpg
 
 fonts:
   - family: ShadowsIntoLight
