--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = true
 
-[*.yml]
+[*.yaml]
 indent_style = space
 indent_size = 2
 charset = utf-8
