--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  google_maps_flutter: ^0.5.11+1
+  location: ^2.3.5
+  flutter_polyline_points: ^0.1.0
   cupertino_icons: ^0.1.3
   http: ^0.12.1
   
