--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^0.5.11+1
+  google_maps_flutter: ^0.4.0
   location: ^2.3.5
   flutter_polyline_points: ^0.1.0
   cupertino_icons: ^0.1.3
   http: ^0.12.1
+  flutter_swiper: ^1.1.6
+  url_launcher: ^5.4.10
+  permission: ^0.1.7
+  table_calendar: ^2.2.3
   
 dev_dependencies:
   flutter_test:
@@ -24,9 +28,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - images/logo.png
     - images/avatar.png
     - images/posto.jpg
+    - images/logo-pink-way.png
 
 fonts:
   - family: ShadowsIntoLight
