--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "trilha de apoio",
-    "short_name": "trilha de apoio",
+    "name": "PinkWay",
+    "short_name": "PinkWay",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
